feat: add scss modules, css markdown

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header class="header">
         <div class="wrapper header__wrapper">
           <a href="#" class="logo_link">
-            <img src="./img/icons/Logo.png" alt="Logotype">
+            <object data="./img/icons/Logo.svg" type="image/svg+xml" class="logo-object"></object>
           </a>
             <nav class="header__navigation">
                 <ul class="navigation">
                     <li class="navigation__li">Home</li>
                     <li class="navigation__li">Services</li>
                     <li class="navigation__li">About</li>
-                    <li class="navigation__li">Ptoject</li>
+                    <li class="navigation__li">Project</li>
                 </ul>
             </nav>
             <div class="header__buttons">
@@ -37,7 +37,8 @@
                     <div class="promo__buttons">
                         <button class="button button_colored">Get started</button>
                         <a href="#" class="link-button">
-                            <span class="icon ico_play"></span> Watch the Video
+                            <span class="ico ico_play"></span> 
+                            <span class="link-button__text">Watch the Video</span>
                         </a>
                     </div>
                 </div>
@@ -46,8 +47,8 @@
         </section>
         <section class="tools">
             <div class="wrapper">
-                <h2>We design tools to unveil your superpowers</h2>
-                <div class="tools__layout-4-columns">
+                <h2 class="tools__title">We design tools to unveil your superpowers</h2>
+                <div class="layout-4-columns">
                     <div class="tool">
                         <div class="tool__icon">
                             <span class="icon-squared violent"></span>
@@ -94,10 +95,53 @@
                     <span class="tag tag-bordered">Culture</span>
                     <span class="tag tag-bordered">Design</span>
                 </div>
-                <div class="layout_3-columns">
+                <div class="layout-3-columns">
                     <div class="strategy block-shadowed">
                         <img src="./img/strategies/1.jpg" alt="Strategy">
                         <h3>Increasing Prosperity With Positive Thinking</h3>
+                        <span class="tag tag-bordered">Art</span>
+                        <span class="tag tag-bordered">Design</span>
+                    </div>
+                    <div class="strategy block-shadowed">
+                        <img src="./img/strategies/2.jpg" alt="Strategy">
+                        <h3>Motivation Is The First Step To Success</h3>
+                        <span class="tag tag-bordered">Culture</span>
+                    </div>
+                    <div class="strategy block-shadowed">
+                        <img src="./img/strategies/3.jpg" alt="Strategy">
+                        <h3>Success Steps For Your Personal Or Business Life</h3>
+                        <span class="tag tag-bordered">Culture</span>
+                        <span class="tag tag-bordered">Design</span>
+                        <span class="tag tag-bordered">Art</span>
+                    </div>
+                    <div class="strategy block-shadowed">
+                        <img src="./img/strategies/4.jpg" alt="Strategy">
+                        <h3>Success Steps For Your Personal Or Business Life Plus Funny Image on the Back</h3>
+                        <span class="tag tag-bordered">Culture</span>
+                        <span class="tag tag-bordered">Design</span>
+                        <span class="tag tag-bordered">Art</span>
+                    </div>
+                    <div class="strategy block-shadowed">
+                        <img src="./img/strategies/5.jpg" alt="Strategy">
+                        <h3>Increasing Prosperity With Positive Thinking</h3>
+                        <span class="tag tag-bordered">Design</span>
+                    </div>
+                    <div class="strategy block-shadowed">
+                        <img src="./img/strategies/1.jpg" alt="Strategy">
+                        <h3>Increasing Prosperity With Positive Thinking</h3>
+                        <span class="tag tag-bordered">Art</span>
+                        <span class="tag tag-bordered">Design</span>
+                    </div>
+                    <div class="strategy block-shadowed">
+                        <img src="./img/strategies/2.jpg" alt="Strategy">
+                        <h3>Motivation Is The First Step To Success</h3>
+                        <span class="tag tag-bordered">Culture</span>
+                    </div>
+                    <div class="strategy block-shadowed">
+                        <img src="./img/strategies/3.jpg" alt="Strategy">
+                        <h3>Success Steps For Your Personal Or Business Life</h3>
+                        <span class="tag tag-bordered">Culture</span>
+                        <span class="tag tag-bordered">Design</span>
                         <span class="tag tag-bordered">Art</span>
                     </div>
                 </div>
@@ -122,7 +166,7 @@
         <section class="contant-us">
             <div class="wrapper">
                 <h2>Contact Us</h2>
-                <div class="layout_2-columns">
+                <div class="layout-2-columns">
                     <div class="contact-us__content">
                         <p>
                             Your About Us page is vital. It’s often the first stop in any user’s journey through a website or blog.
@@ -139,7 +183,7 @@
                     </div>
                     <div class="contact-us__form">
                         <form action="" method="post">
-                            <div class="layout_2-columns">
+                            <div class="layout-2-columns">
                                 <input type="text" name="name" placeholder="Your name">
                                 <input type="email" name="email" placeholder="Your email">
                             </div>
