finish css markdown

--- a/index.html
+++ b/index.html
@@ -46,37 +46,45 @@
             </div>
         </section>
         <section class="tools">
-            <div class="wrapper">
+            <div class="wrapper tools__wrapper">
                 <h2 class="tools__title">We design tools to unveil your superpowers</h2>
                 <div class="layout-4-columns">
                     <div class="tool">
                         <div class="tool__icon">
-                            <span class="icon-squared violent"></span>
-                            <h4>First click tests</h4>
-                            <p>While most people enjoy
+                            <span class="icon-squared icon-squared_violent">
+                                <span class="ico ico_arrow"></span>
+                            </span>
+                            <h4 class="tool__header">First click tests</h4>
+                            <p class="tool__text">While most people enjoy
                                 casino gambling</p>
                         </div>
                     </div>
                     <div class="tool">
                         <div class="tool__icon">
-                            <span class="icon-squared violent"></span>
-                            <h4>Design surveys</h4>
-                            <p>Sports betting, lottery and bingo playing for the fun</p>
+                            <span class="icon-squared icon-squared_orange">
+                                <span class="ico ico_curve"></span>
+                            </span>
+                            <h4 class="tool__header">Design surveys</h4>
+                            <p class="tool__text">Sports betting, lottery and bingo playing for the fun</p>
                         </div>
                     </div>
                     <div class="tool">
                         <div class="tool__icon">
-                            <span class="icon-squared violent"></span>
-                            <h4>Preference tests</h4>
-                            <p>The Myspace page defines
+                            <span class="icon-squared icon-squared_red">
+                                <span class="ico ico_heart"></span>
+                            </span>
+                            <h4 class="tool__header">Preference tests</h4>
+                            <p class="tool__text">The Myspace page defines
                                 the individual.</p>
                         </div>
                     </div>
                     <div class="tool">
                         <div class="tool__icon">
-                            <span class="icon-squared violent"></span>
-                            <h4>Five second tests</h4>
-                            <p>Personal choices and the overall personality of the person. </p>
+                            <span class="icon-squared icon-squared_blue">
+                                <span class="ico ico_watches"></span>
+                            </span>
+                            <h4 class="tool__header">Five second tests</h4>
+                            <p class="tool__text">Personal choices and the overall personality of the person. </p>
                         </div>
                     </div>
                 </div>
@@ -87,78 +95,129 @@
         </section>
         <section class="strategies">
             <div class="wrapper">
-                <h2>Marketing Strategies</h2>
+                <h2 class="strategies__header">Marketing Strategies</h2>
                 <p class="startegies__desription">Join 40,000+ other marketers and get proven strategies on email marketing</p>
-                <div class="satrategies__tags">
+                <div class="strategies__tags tags">
                     <span class="tag tag_selected">All</span>
-                    <span class="tag tag-bordered">Art</span>
-                    <span class="tag tag-bordered">Culture</span>
-                    <span class="tag tag-bordered">Design</span>
+                    <span class="tag tag_bordered">Art</span>
+                    <span class="tag tag_bordered">Culture</span>
+                    <span class="tag tag_bordered">Design</span>
                 </div>
-                <div class="layout-3-columns">
+                <div class="layout-3-columns strategy-wrapper">
                     <div class="strategy block-shadowed">
                         <img src="./img/strategies/1.jpg" alt="Strategy">
-                        <h3>Increasing Prosperity With Positive Thinking</h3>
-                        <span class="tag tag-bordered">Art</span>
-                        <span class="tag tag-bordered">Design</span>
+                        <div class="strategy__content">
+                            <h3 class="startegy__header">Increasing Prosperity With Positive Thinking</h3>
+                            <div class="tags">
+                                <span class="tag tag_colored">Art</span>
+                                <span class="tag tag_colored">Design</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="strategy block-shadowed">
                         <img src="./img/strategies/2.jpg" alt="Strategy">
-                        <h3>Motivation Is The First Step To Success</h3>
-                        <span class="tag tag-bordered">Culture</span>
+                        <div class="strategy__content">
+                            <h3 class="startegy__header">Motivation Is The First Step To Success</h3>
+                            <div class="tags">
+                                <span class="tag tag_colored">Culture</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="strategy block-shadowed">
                         <img src="./img/strategies/3.jpg" alt="Strategy">
-                        <h3>Success Steps For Your Personal Or Business Life</h3>
-                        <span class="tag tag-bordered">Culture</span>
-                        <span class="tag tag-bordered">Design</span>
-                        <span class="tag tag-bordered">Art</span>
+                        <div class="strategy__content">
+                            <h3 class="startegy__header">Success Steps For Your Personal Or Business Life</h3>
+                            <div class="tags">
+                                <span class="tag tag_colored">Culture</span>
+                                <span class="tag tag_colored">Design</span>
+                                <span class="tag tag_colored">Art</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="strategy block-shadowed">
                         <img src="./img/strategies/4.jpg" alt="Strategy">
-                        <h3>Success Steps For Your Personal Or Business Life Plus Funny Image on the Back</h3>
-                        <span class="tag tag-bordered">Culture</span>
-                        <span class="tag tag-bordered">Design</span>
-                        <span class="tag tag-bordered">Art</span>
+                        <div class="strategy__content">
+                            <h3 class="startegy__header">Success Steps For Your Personal Or Business Life Plus Funny Image on the Back</h3>
+                            <div class="tags">
+                                <span class="tag tag_colored">Culture</span>
+                                <span class="tag tag_colored">Design</span>
+                                <span class="tag tag_colored">Art</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="strategy block-shadowed">
                         <img src="./img/strategies/5.jpg" alt="Strategy">
-                        <h3>Increasing Prosperity With Positive Thinking</h3>
-                        <span class="tag tag-bordered">Design</span>
+                        <div class="strategy__content">
+                            <h3 class="startegy__header">Increasing Prosperity With Positive Thinking</h3>
+                            <div class="tags">
+                               <span class="tag tag_colored">Design</span> 
+                            </div>
+                        </div>
                     </div>
                     <div class="strategy block-shadowed">
                         <img src="./img/strategies/1.jpg" alt="Strategy">
-                        <h3>Increasing Prosperity With Positive Thinking</h3>
-                        <span class="tag tag-bordered">Art</span>
-                        <span class="tag tag-bordered">Design</span>
+                        <div class="strategy__content">
+                            <h3 class="startegy__header">Increasing Prosperity With Positive Thinking</h3>
+                            <div class="tags">
+                                <span class="tag tag_colored">Art</span>
+                                <span class="tag tag_colored">Design</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="strategy block-shadowed">
                         <img src="./img/strategies/2.jpg" alt="Strategy">
-                        <h3>Motivation Is The First Step To Success</h3>
-                        <span class="tag tag-bordered">Culture</span>
+                        <div class="strategy__content">
+                            <h3 class="startegy__header">Motivation Is The First Step To Success</h3>
+                            <div class="tags">
+                                <span class="tag tag_colored">Culture</span>
+                            </div>
+                        </div>
                     </div>
                     <div class="strategy block-shadowed">
                         <img src="./img/strategies/3.jpg" alt="Strategy">
-                        <h3>Success Steps For Your Personal Or Business Life</h3>
-                        <span class="tag tag-bordered">Culture</span>
-                        <span class="tag tag-bordered">Design</span>
-                        <span class="tag tag-bordered">Art</span>
+                        <div class="strategy__content">
+                            <h3 class="startegy__header">Success Steps For Your Personal Or Business Life</h3>
+                            <div class="tags">
+                                <span class="tag tag_colored">Culture</span>
+                                <span class="tag tag_colored">Design</span>
+                                <span class="tag tag_colored">Art</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="about">
-            <div class="wrapper">
-                <h2>About us</h2>
-                <p>Your About Us page is vital. It’s often the first stop in any user’s journey through a website or blog.
+            <div class="wrapper wrapper__about">
+                <h2 class="about__header">About us</h2>
+                <p class="about__text"> Your About Us page is vital. It’s often the first stop in any user’s journey through a website or blog.
                     It also shouldn’t be their last, because first impressions count online just as much as they do in the real world.
                     If your visitors aren’t impressed, you can expect them to leave without reading your awesome content or completing
                     a conversion action (e.g., signing up for your newsletter, making a purchase).</p>
-                <div class="employee block-shadowed">
-                    <div class="employee__content">
-                        <h5>Kathy Rosenberg</h5>
-                        <p class="employee__title">Product Mannager</p>
-                        <a href="mailto:kathyr@gmail.com">kathyr@gmail.com</a>
+                <div class="layout-3-columns employee__container">
+                    <div class="employee block-shadowed">
+                        <div class="employee__content">
+                            <h5 class="employee__name">Kathy Rosenberg</h5>
+                            <p class="employee__title">Product Mannager</p>
+                            <a href="mailto:kathyr@gmail.com" class="employee__contact">kathyr@gmail.com</a>
+                        </div>
+                        <img src="./img/employees/1 av.jpg" alt="person photo" class="employee__photo">
+                    </div>
+                    <div class="employee block-shadowed">
+                        <div class="employee__content">
+                            <h5 class="employee__name">Alexandra Boyarskaya</h5>
+                            <p class="employee__title">Product Mannager</p>
+                            <a href="mailto:kathyr@gmail.com" class="employee__contact">kathyr@gmail.com</a>
+                        </div>
+                        <img src="./img/employees/2 av.jpg" alt="person photo" class="employee__photo">
+                    </div>
+                    <div class="employee block-shadowed">
+                        <div class="employee__content">
+                            <h5 class="employee__name">Melani Amini</h5>
+                            <p class="employee__title">Product Mannager</p>
+                            <a href="mailto:kathyr@gmail.com" class="employee__contact">kathyr@gmail.com</a>
+                        </div>
+                        <img src="./img/employees/3 av.jpg" alt="person photo" class="employee__photo">
                     </div>
                 </div>
             </div>
@@ -183,11 +242,11 @@
                     </div>
                     <div class="contact-us__form">
                         <form action="" method="post">
-                            <div class="layout-2-columns">
+                            <div class="layout-2-columns contact-us__line">
                                 <input type="text" name="name" placeholder="Your name">
                                 <input type="email" name="email" placeholder="Your email">
                             </div>
-                            <textarea name="question" cols="30" rows="10"></textarea>
+                            <textarea name="question" cols="30" rows="10" class="contact-us__line"></textarea>
                             <div class="contact-us__button">
                                 <button type="submit" class="button button_colored">Send</button>
                             </div>
@@ -198,17 +257,38 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="wrapper">
-            <div class="layout-4-columns">
-                <a href="" class="logo_link">Logo</a>
-                <div class="footer-navigation">
-                    <h4>Quick Links</h4>
-                    <ul class="footer-navigation__links">
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">About us</a></li>
-                    </ul>
+        <div class="wrapper footer__wrapper">
+            <a href="#" class="logo_link">
+                <object data="./img/icons/Logo.svg" type="image/svg+xml" class="logo-object"></object>
+              </a>
+            <div class="footer-navigation layout-3-columns">
+                    <div class="footer-navigation__column">
+                        <h4 class="footer-navigation__header">Quick Links</h4>
+                        <ul class="footer-navigation__links">
+                            <li><a href="#">About us</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">FAQ</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-navigation__column">
+                        <h4 class="footer-navigation__header">Legal Stuff</h4>
+                        <ul class="footer-navigation__links">
+                            <li><a href="#">Disclaimer</a></li>
+                            <li><a href="#">Financing</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Terms of Service</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-navigation__column">
+                        <h4 class="footer-navigation__header">Quick Links</h4>
+                        <ul class="footer-navigation__links">
+                            <li><a href="#">About us</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">FAQ</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
